--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "bun run --watch src/index.ts",
-    "start": "bun run src/index.ts",
+    "start": "NODE_ENV=production bun run src/index.ts",
+    "start:dev": "bun run src/index.ts",
     "build": "bun build src/index.ts --outfile=dist/index.js --target=bun",
     "test": "bun test"
   },
