--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,11 @@
 [build]
 builder = "NIXPACKS"
+nixpacksPlan = "bun"
 
 [deploy]
-startCommand = "bun start"
+startCommand = "bun run src/index.ts"
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 3
 
 [providers]
 bun = "latest"
