--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-DATABASE_URL="postgresql://USER:PASSWORD@HOST:5432/DB_NAME?schema=public"
-PORT=3000
+# Copy this file to .env and adjust as needed
+DATABASE_URL=postgresql://elysia:elysia_pass@localhost:5432/elysia_db?schema=public
+PORT=2070
