--- a/package.json
+++ b/package.json
@@ -1,33 +1,26 @@
 {
   "name": "elysia-user-crud",
-  "module": "src/index.ts",
-  "type": "module",
+  "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "bun run --watch src/index.ts",
-    "start": "bun run src/index.ts",
-    "start:dev": "bun run src/index.ts",
-    "build": "bun build src/index.ts --outfile=dist/index.js --target=bun",
-    "test": "bun test",
-    "prisma:generate": "bunx prisma generate",
-    "prisma:push": "bunx prisma db push",
-    "prisma:migrate": "bunx prisma migrate dev --name init",
-    "db:studio": "bunx prisma studio",
-    "postinstall": "bunx prisma generate"
-  },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "typescript": "^5",
-    "prisma": "^5"
+    "dev": "bun --hot src/index.ts",
+    "start": "bun src/index.ts",
+    "dev:node": "tsx watch src/index.ts",
+    "start:node": "tsx src/index.ts",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev --name init",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
-    "@elysiajs/cors": "^1.4.0",
-    "@elysiajs/swagger": "^1.3.1",
-    "dotenv": "^17.2.2",
-    "elysia": "^1.4.8",
-    "@prisma/client": "^5"
+    "@elysiajs/swagger": "^1.0.5",
+    "@prisma/client": "^5.18.0",
+    "dotenv": "^16.4.5",
+    "elysia": "^1.0.30"
   },
-  "engines": {
-    "bun": ">=1.0.0"
+  "devDependencies": {
+    "prisma": "^5.18.0",
+    "typescript": "^5.6.3",
+    "tsx": "^4.19.0"
   }
 }
